--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -368,6 +368,10 @@ body {
     color : $projects-text-color;
     padding: 100px 20px;
 
+    h2 {
+        color:#fff;
+    }
+
     // for better text readability
     &::before {
         content: '';
@@ -473,7 +477,12 @@ body {
     padding: 0; 
     margin: 0;
     width: 100vw;
+    background-color: #333;
 
+    h2 {
+        color: #fff;
+    }
+    
     .gallery {
         position: relative;
         width: 100%;
